Files are structured and arranged.

--- a/dataset_create_submixes.ipynb
+++ b/dataset_create_submixes.ipynb
@@ -24,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Path of the dataset files is defined\n",
     "slakh_path = \"/engram/naplab/shared/Slakh2100/slakh2100_flac_redux\""
    ]
   },
@@ -1322,63 +1323,69 @@
    ],
    "source": [
     "#Train Set\n",
-    "jsonl = []\n",
-    "for track_id in os.listdir(os.path.join(slakh_path,'train')):\n",
-    "    print(track_id)\n",
+    "for track_id in os.listdir(os.path.join(slakh_path,'train')): #For each track in the train set\n",
+    "    print(track_id) #Track ID is printed for the verbose\n",
     "    track_path = os.path.join(\"train\",track_id)\n",
     "    \n",
-    "    all_instruments = []    \n",
-    "    \n",
-    "#     audio, sr = librosa.load(os.path.join(slakh_path,track_path,'mix.flac'), sr=None)\n",
-    "#     audio_len = len(audio)/sr\n",
+    "    all_instruments = [] #List for storing names of all instruments available for the current track\n",
     "    \n",
     "    with open(os.path.join(slakh_path,track_path,'metadata.yaml'), 'r') as metadata_file:\n",
-    "        metadata = yaml.safe_load(metadata_file) \n",
+    "        metadata = yaml.safe_load(metadata_file) #The metadata file is loaded to get information about instrument tracks\n",
     "    \n",
-    "    if not os.path.exists(os.path.join(slakh_path,track_path,'submixes')):\n",
-    "        os.makedirs(os.path.join(slakh_path,track_path,'submixes'))\n",
+    "    if not os.path.exists(os.path.join(slakh_path,track_path,'submixes')): \n",
+    "        os.makedirs(os.path.join(slakh_path,track_path,'submixes')) #The folder for submixes of current track is created\n",
     "        \n",
-    "    for i in range(4):\n",
-    "        curr_pick = random.sample(list(metadata['stems']), 2)\n",
+    "    for i in range(4): #4 submixes with two instruments are created\n",
+    "        curr_pick = random.sample(list(metadata['stems']), 2) #Two instruments are picked randomly from the instrument list\n",
+    "        #Checked if the audio file for any instruments picked is missing\n",
     "        if os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[0]}.flac')) and os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[1]}.flac')):\n",
+    "            #Audios for instruments are loaded\n",
     "            audio1, sr = librosa.load(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[0]}.flac'), sr=None)\n",
     "            audio2, sr = librosa.load(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[1]}.flac'), sr=None)\n",
     "        else:\n",
     "            continue\n",
     "        audio_len = len(audio1)/sr\n",
+    "        #Audio file for the current submix is saved\n",
     "        sf.write(os.path.join(slakh_path,track_path,'submixes',f\"{curr_pick[0]}_{curr_pick[1]}.flac\"), (audio1+audio2), sr)\n",
     "        \n",
     "        instrument1 = metadata['stems'][curr_pick[0]]['midi_program_name']\n",
     "        instrument2 = metadata['stems'][curr_pick[1]]['midi_program_name']\n",
-    "        all_instruments = ', '.join([instrument1,instrument2])\n",
+    "        all_instruments = ', '.join([instrument1,instrument2])  #The picked instrument names are stored\n",
     "\n",
+    "        #.json file is created for the submix audio\n",
     "        curr_json = {\"key\": \"\", \"artist\": \"\", \"sample_rate\": sr, \"file_extension\": \"flac\", \"description\": all_instruments, \"keywords\": all_instruments, \"duration\": round(audio_len,1), \"bpm\": \"\", \"genre\": \"\", \"title\": \"\", \"name\": \"\", \"instrument\": all_instruments, \"moods\": \"\"}\n",
     "        with open(os.path.join(slakh_path,track_path,'submixes',f'{curr_pick[0]}_{curr_pick[1]}.json'), 'w') as json_file:\n",
-    "            json.dump(curr_json, json_file, indent=4)\n",
+    "            json.dump(curr_json, json_file, indent=4) #.json file for submix track is created\n",
     "            \n",
-    "    for i in range(3):\n",
-    "        curr_pick = random.sample(list(metadata['stems']), 3)\n",
+    "    for i in range(3): #3 submixes with three instruments are created\n",
+    "        curr_pick = random.sample(list(metadata['stems']), 3) #Three instruments are picked randomly from the instrument list\n",
+    "        #Checked if the audio file for any instruments picked is missing\n",
     "        if os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[0]}.flac')) and os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[1]}.flac')) and os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[2]}.flac')):\n",
+    "            #Audios for instruments are loaded\n",
     "            audio1, sr = librosa.load(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[0]}.flac'), sr=None)\n",
     "            audio2, sr = librosa.load(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[1]}.flac'), sr=None)\n",
     "            audio3, sr = librosa.load(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[2]}.flac'), sr=None)\n",
     "        else:\n",
     "            continue\n",
     "        audio_len = len(audio1)/sr\n",
+    "        #Audio file for the current submix is saved\n",
     "        sf.write(os.path.join(slakh_path,track_path,'submixes',f\"{curr_pick[0]}_{curr_pick[1]}_{curr_pick[2]}.flac\"), (audio1+audio2+audio3), sr)\n",
     "        \n",
     "        instrument1 = metadata['stems'][curr_pick[0]]['midi_program_name']\n",
     "        instrument2 = metadata['stems'][curr_pick[1]]['midi_program_name']\n",
     "        instrument3 = metadata['stems'][curr_pick[2]]['midi_program_name']\n",
-    "        all_instruments = ', '.join([instrument1,instrument2,instrument3])\n",
+    "        all_instruments = ', '.join([instrument1,instrument2,instrument3]) #The picked instrument names are stored\n",
     "\n",
+    "        #.json file is created for the submix audio\n",
     "        curr_json = {\"key\": \"\", \"artist\": \"\", \"sample_rate\": sr, \"file_extension\": \"flac\", \"description\": all_instruments, \"keywords\": all_instruments, \"duration\": round(audio_len,1), \"bpm\": \"\", \"genre\": \"\", \"title\": \"\", \"name\": \"\", \"instrument\": all_instruments, \"moods\": \"\"}\n",
     "        with open(os.path.join(slakh_path,track_path,'submixes',f'{curr_pick[0]}_{curr_pick[1]}_{curr_pick[2]}.json'), 'w') as json_file:\n",
-    "            json.dump(curr_json, json_file, indent=4)\n",
+    "            json.dump(curr_json, json_file, indent=4) #.json file for submix track is created\n",
     "            \n",
-    "    for i in range(2):\n",
-    "        curr_pick = random.sample(list(metadata['stems'].keys()), 4)\n",
+    "    for i in range(2): #2 submixes with four instruments are created\n",
+    "        curr_pick = random.sample(list(metadata['stems'].keys()), 4) #Four instruments are picked randomly from the instrument list\n",
+    "        #Checked if the audio file for any instruments picked is missing\n",
     "        if os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[0]}.flac')) and os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[1]}.flac')) and os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[2]}.flac')) and os.path.exists(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[3]}.flac')):\n",
+    "            #Audios for instruments are loaded\n",
     "            audio1, sr = librosa.load(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[0]}.flac'), sr=None)\n",
     "            audio2, sr = librosa.load(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[1]}.flac'), sr=None)\n",
     "            audio3, sr = librosa.load(os.path.join(slakh_path,track_path,'stems',f'{curr_pick[2]}.flac'), sr=None)\n",
@@ -1386,17 +1393,19 @@
     "        else:\n",
     "            continue\n",
     "        audio_len = len(audio1)/sr\n",
+    "        #Audio file for the current submix is saved\n",
     "        sf.write(os.path.join(slakh_path,track_path,'submixes',f\"{curr_pick[0]}_{curr_pick[1]}_{curr_pick[2]}_{curr_pick[3]}.flac\"), (audio1+audio2+audio3+audio4), sr)\n",
     "        \n",
     "        instrument1 = metadata['stems'][curr_pick[0]]['midi_program_name']\n",
     "        instrument2 = metadata['stems'][curr_pick[1]]['midi_program_name']\n",
     "        instrument3 = metadata['stems'][curr_pick[2]]['midi_program_name']\n",
     "        instrument4 = metadata['stems'][curr_pick[3]]['midi_program_name']\n",
-    "        all_instruments = ', '.join([instrument1,instrument2,instrument3,instrument4])\n",
+    "        all_instruments = ', '.join([instrument1,instrument2,instrument3,instrument4])  #The picked instrument names are stored\n",
     "\n",
+    "        #.json file is created for the submix audio\n",
     "        curr_json = {\"key\": \"\", \"artist\": \"\", \"sample_rate\": sr, \"file_extension\": \"flac\", \"description\": all_instruments, \"keywords\": all_instruments, \"duration\": round(audio_len,1), \"bpm\": \"\", \"genre\": \"\", \"title\": \"\", \"name\": \"\", \"instrument\": all_instruments, \"moods\": \"\"}\n",
     "        with open(os.path.join(slakh_path,track_path,'submixes',f'{curr_pick[0]}_{curr_pick[1]}_{curr_pick[2]}_{curr_pick[3]}.json'), 'w') as json_file:\n",
-    "            json.dump(curr_json, json_file, indent=4)"
+    "            json.dump(curr_json, json_file, indent=4) #.json file for submix track is created"
    ]
   },
   {
@@ -1684,15 +1693,12 @@
    ],
    "source": [
     "#Validation Set\n",
-    "jsonl = []\n",
+    "#The code is exactly the same with the training set block except the loop is over tracks in the validation set\n",
     "for track_id in os.listdir(os.path.join(slakh_path,'validation')):\n",
     "    print(track_id)\n",
     "    track_path = os.path.join(\"validation\",track_id)\n",
     "    \n",
     "    all_instruments = []    \n",
-    "    \n",
-    "#     audio, sr = librosa.load(os.path.join(slakh_path,track_path,'mix.flac'), sr=None)\n",
-    "#     audio_len = len(audio)/sr\n",
     "    \n",
     "    with open(os.path.join(slakh_path,track_path,'metadata.yaml'), 'r') as metadata_file:\n",
     "        metadata = yaml.safe_load(metadata_file) \n",
@@ -1929,15 +1935,12 @@
    ],
    "source": [
     "#Test Set\n",
-    "jsonl = []\n",
+    "#The code is exactly the same with the training set block except the loop is over tracks in the test set\n",
     "for track_id in os.listdir(os.path.join(slakh_path,'test')):\n",
     "    print(track_id)\n",
     "    track_path = os.path.join(\"test\",track_id)\n",
     "    \n",
     "    all_instruments = []    \n",
-    "    \n",
-    "#     audio, sr = librosa.load(os.path.join(slakh_path,track_path,'mix.flac'), sr=None)\n",
-    "#     audio_len = len(audio)/sr\n",
     "    \n",
     "    with open(os.path.join(slakh_path,track_path,'metadata.yaml'), 'r') as metadata_file:\n",
     "        metadata = yaml.safe_load(metadata_file) \n",
