--- a/dataset_prepare_slakh2100_indv_mix.ipynb
+++ b/dataset_prepare_slakh2100_indv_mix.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Path of the dataset files is defined\n",
     "slakh_path = \"/engram/naplab/shared/Slakh2100/slakh2100_flac_redux\""
    ]
   },
@@ -1335,38 +1336,42 @@
    ],
    "source": [
     "#Training Set\n",
-    "jsonl = []\n",
-    "for track_id in os.listdir(os.path.join(slakh_path,'train')):\n",
-    "    print(track_id)\n",
-    "    track_path = os.path.join(\"train\",track_id)\n",
+    "jsonl = [] #List for stacking all json files\n",
+    "for track_id in os.listdir(os.path.join(slakh_path,'train')): #For each track in the train set\n",
+    "    print(track_id) #Track ID is printed for the verbose\n",
+    "    track_path = os.path.join(\"train\",track_id) #Variable for the current track path\n",
     "    \n",
-    "    all_instruments = []    \n",
+    "    all_instruments = [] #List for storing names of all instruments available for the current track\n",
     "    \n",
-    "    audio, sr = librosa.load(os.path.join(slakh_path,track_path,'mix.flac'), sr=None)\n",
-    "    audio_len = len(audio)/sr\n",
+    "    audio, sr = librosa.load(os.path.join(slakh_path,track_path,'mix.flac'), sr=None) #Audio of the mixture track is loaded\n",
+    "    audio_len = len(audio)/sr #Audio duration is obtained\n",
     "    \n",
     "    with open(os.path.join(slakh_path,track_path,'metadata.yaml'), 'r') as metadata_file:\n",
-    "        metadata = yaml.safe_load(metadata_file) \n",
+    "        metadata = yaml.safe_load(metadata_file) #The metadata file is loaded to get information about instrument tracks\n",
     "        \n",
-    "    for stem in metadata['stems'].keys():\n",
+    "    for stem in metadata['stems'].keys(): #Loop over each individual instrument file\n",
     "        output_path = os.path.join(slakh_path,track_path,'stems')\n",
-    "        instrument = metadata['stems'][stem]['midi_program_name']\n",
+    "        instrument = metadata['stems'][stem]['midi_program_name'] #Name of the current instrument\n",
+    "        #.json dictionary for the current individual instrument audio is created \n",
     "        curr_json = {\"key\": \"\", \"artist\": \"\", \"sample_rate\": sr, \"file_extension\": \"flac\", \"description\": instrument, \"keywords\": instrument, \"duration\": round(audio_len,1), \"bpm\": \"\", \"genre\": \"\", \"title\": \"\", \"name\": \"\", \"instrument\": instrument, \"moods\": \"\"}\n",
     "        with open(os.path.join(slakh_path,track_path,'stems',stem+'.json'), 'w') as json_file:\n",
-    "            json.dump(curr_json, json_file, indent=4)\n",
+    "            json.dump(curr_json, json_file, indent=4) #.json file for single instrument track is created\n",
+    "        #.json dictionary is appended to the list for all .json files\n",
     "        jsonl.append({\"path\": os.path.join(slakh_path,track_path,'stems',stem+'.flac'), \"duration\": audio_len, \"sample_rate\": sr, \"amplitude\": None, \"weight\": None, \"info_path\": None})\n",
-    "        all_instruments.append(instrument)    \n",
+    "        all_instruments.append(instrument) #Name of the current instrument is added to the instruments list    \n",
     "        \n",
-    "    all_instruments = ', '.join(all_instruments)\n",
+    "    all_instruments = ', '.join(all_instruments) #All instruments are listed in a string to create mixture .json file\n",
     "    output_path = os.path.join(slakh_path,track_path)\n",
+    "    #.json file is created for the mixture audio\n",
     "    curr_json = {\"key\": \"\", \"artist\": \"\", \"sample_rate\": sr, \"file_extension\": \"flac\", \"description\": all_instruments, \"keywords\": all_instruments, \"duration\": round(audio_len,1), \"bpm\": \"\", \"genre\": \"\", \"title\": \"\", \"name\": \"\", \"instrument\": all_instruments, \"moods\": \"\"}\n",
     "    with open(os.path.join(slakh_path,track_path,'mix.json'), 'w') as json_file:\n",
-    "        json.dump(curr_json, json_file, indent=4)\n",
+    "        json.dump(curr_json, json_file, indent=4) #.json file for mixture track is created\n",
+    "    #.json dictionary is appended to the list for all .json files    \n",
     "    jsonl.append({\"path\": os.path.join(slakh_path,track_path,'mix.flac'), \"duration\": audio_len, \"sample_rate\": sr, \"amplitude\": None, \"weight\": None, \"info_path\": None})\n",
     "    \n",
     "with open(\"/home/sd3705/music_gen_2024f/audiocraft/egs/slakh2100_train/data.jsonl\", 'w') as jsonl_file:\n",
     "    for curr_data in jsonl:\n",
-    "        jsonl_file.write(json.dumps(curr_data) + '\\n')    "
+    "        jsonl_file.write(json.dumps(curr_data) + '\\n') #.jsonl file is saved "
    ]
   },
   {
@@ -1656,6 +1661,7 @@
    ],
    "source": [
     "#Validation Set\n",
+    "#The code is exactly the same with the training set block except the loop is over tracks in the validation set\n",
     "jsonl = []\n",
     "for track_id in os.listdir(os.path.join(slakh_path,'validation')):\n",
     "    print(track_id)\n",
@@ -1856,6 +1862,7 @@
    ],
    "source": [
     "#Test Set\n",
+    "#The code is exactly the same with the training set block except the loop is over tracks in the test set\n",
     "jsonl = []\n",
     "for track_id in os.listdir(os.path.join(slakh_path,'test')):\n",
     "    print(track_id)\n",
